# calender-to-do-list

./: .env  .gitignore  Cargo.toml  Dioxus.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  rust.yml
assets/: tailwind.css
src/: main.rs
src/auth/: backend.rs  ui.rs
src/calendar/: backend.rs  mod.rs
src/calendar/backend/: change_calendar_event.rs  create_calendar_event.rs  delete_calendar_event.rs  handle_recurrence_cal_events.rs  mod.rs  utils.rs
src/calendar/frontend/: calendar_grid.rs  calendar_page.rs  event_form.rs  mod.rs
src/dashboard/backend/: fetch_dashboard_calendar_data.rs  fetch_dashboard_data.rs  fetch_dashboard_todo_data.rs  mod.rs
src/dashboard/frontend/: dashboard.rs  dashboard_calendar.rs  dashboard_chat.rs  dashboard_news.rs  dashboard_todos.rs  mod.rs
src/database/local/: heartbeat.rs  local_Database.db  local_Database.db-journal  mod.rs  sync_local_db.rs
src/database/local/init_fetch/: init_fetch_local_db.rs  mod.rs
src/database/local/sync/: calendar_events.rs  calendars.rs  groups.rs  members.rs  mod.rs  profiles.rs  todolists.rs  todos.rs
src/groups/: mod.rs  state.rs
src/groups/backend/: files.rs  groups.rs  invites.rs  members.rs  mod.rs  roles.rs
src/groups/frontend/: group_detail.rs  invite_widget.rs  members.rs  mod.rs  overview.rs  roles_tab.rs
src/navbar/: ui.rs
src/tasks/: mod.rs
src/todos/: backend.rs  ui.rs
src/todos/backend/: complete_todo.rs  create_todo.rs  create_todolist.rs  delete_todo.rs  delete_todolist.rs  edit_todo.rs  edit_todolist.rs  handle_recurrence_todos.rs  mod.rs
src/todos/frontend/: create_edit_todo.rs  create_edit_todolist.rs  create_todo.rs  create_todolist.rs  filter_todos.rs  mod.rs  open_todos.rs  recurrance_edit_modal.rs  todo_dashboard.rs  todo_detail.rs  todo_history.rs  todo_view.rs
src/user/: backend.rs
src/user/frontend/: create_profile.rs  mod.rs  profile_view.rs
src/utils/: date_formatting.rs  date_handling.rs  functions.rs  functions_for_supabase  functions_for_supabase.rs  mod.rs  structs.rs
