[package]
name = "planify"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.2", features = ["router"] } 
dioxus-logger = "0.7.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
supabase-lib-rs = "0.5"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
reqwest = { version = "0.13.1", features = ["json", "query"] }
strum = { version = "0.27.2", features = ["strum_macros"] }
dotenvy = { version = "0.15" }
open = "5"
rfd = "0.15"
axum = "0.7"
urlencoding = "2"
server_fn = "0.8"
http = "1.4.0"
time = "=0.3.36"

[features]
# hier web drinnen lassen sonst meckern github runner, aber weiterhin starten mit dx serve --desktop
default = ["web"] 
web = ["dioxus/web", "chrono/wasmbind"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "dioxus/fullstack"]
